--- a/static/sivu.html
+++ b/static/sivu.html
@@ -4,6 +4,8 @@
     <title>Hääilmo</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
+    <script src="jquery-1.11.0.min.js" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
   </head>
   <body>
     <div>
@@ -35,41 +37,118 @@
       </p>
       <form>
         <ul class="people">
-          <li class="person">
+          <!-- person 1 -->
+          <li class="person person1">
             <span class="label">
               Nimi:
             </span>
-            <input type="text" />
+            <input type="text" name="nimi1"/>
             <div>
             <span class="label">
               Pääsee:
             </span>              
-              <input type="radio" name="paasee" value="kylla" />Joo
-              <input type="radio" name="paasee" value="kylla" />Ei
+              <input type="radio" name="rsvp1" value="1" />Joo
+              <input type="radio" name="rsvp1" value="0" checked />Ei
             </div>
             <span class="label">
-              Erikoisruokavaliot:
+              Erityisruokavaliot:
             </span>
-            <input type="text" />
+            <input type="text" name="valio1"/>
           </li>
-          <li class="person">
+          <!-- person 2 -->
+          <li class="person person2">
             <span class="label">
               Nimi:
             </span>
-            <input type="text" />
+            <input type="text" name="nimi2"/>
             <div>
             <span class="label">
               Pääsee:
             </span>              
-              <input type="radio" name="paasee" value="kylla" />Joo
-              <input type="radio" name="paasee" value="kylla" />Ei
+              <input type="radio" name="rsvp2" value="1" />Joo
+              <input type="radio" name="rsvp2" value="0" checked />Ei
             </div>
             <span class="label">
-              Erikoisruokavaliot:
+              Erityisruokavaliot:
             </span>
-            <input type="text" />
+            <input type="text" name="valio2"/>
           </li>
 
+          <!-- person 3 -->
+          <li class="person person3">
+            <span class="label">
+              Nimi:
+            </span>
+            <input type="text" name="nimi3"/>
+            <div>
+            <span class="label">
+              Pääsee:
+            </span>              
+              <input type="radio" name="rsvp3" value="1" />Joo
+              <input type="radio" name="rsvp3" value="0" checked />Ei
+            </div>
+            <span class="label">
+              Erityisruokavaliot:
+            </span>
+            <input type="text" name="valio3"/>
+          </li>
+
+          <!-- person 4 -->
+          <li class="person person4">
+            <span class="label">
+              Nimi:
+            </span>
+            <input type="text" name="nimi4"/>
+            <div>
+            <span class="label">
+              Pääsee:
+            </span>              
+              <input type="radio" name="rsvp4" value="1" />Joo
+              <input type="radio" name="rsvp4" value="0" checked />Ei
+            </div>
+            <span class="label">
+              Erityisruokavaliot:
+            </span>
+            <input type="text" name="valio4"/>
+          </li>
+
+         <!-- person 5-->
+          <li class="person person5">
+            <span class="label">
+              Nimi:
+            </span>
+            <input type="text" name="nimi5"/>
+            <div>
+            <span class="label">
+              Pääsee:
+            </span>              
+              <input type="radio" name="rsvp5" value="1" />Joo
+              <input type="radio" name="rsvp5" value="0" checked />Ei
+            </div>
+            <span class="label">
+              Erityisruokavaliot:
+            </span>
+            <input type="text" name="valio5"/>
+          </li>
+
+          <!-- person 6 -->
+          <li class="person person6">
+            <span class="label">
+              Nimi:
+            </span>
+            <input type="text" name="nimi6"/>
+            <div>
+            <span class="label">
+              Pääsee:
+            </span>              
+              <input type="radio" name="rsvp6" value="1" />Joo
+              <input type="radio" name="rsvp6" value="0" checked />Ei
+            </div>
+            <span class="label">
+              Erityisruokavaliot:
+            </span>
+            <input type="text" name="valio6"/>
+          </li>
         </ul>
         <div class="addperson">[+] Lisää henkilö</div>
 
