--- a/static/sivu.html
+++ b/static/sivu.html
@@ -35,7 +35,7 @@
         Muistattehan ilmoittaa kutsukunnastanne myös ne, jotka eivät pääse tulemaan.
 
       </p>
-      <form>
+      <form action="form" method="post">
         <ul class="people">
           <!-- person 1 -->
           <li class="person person1">
