Collection of form

--- a/static/sivu.html
+++ b/static/sivu.html
@@ -156,7 +156,7 @@
           <span class="label">
             Muuta:
           </span>
-          <textarea></textarea>
+          <textarea name="muuta"></textarea>
         </div>
         <div>
           <input type="submit" value="Vastaa kutsuun"/>
