--- a/static/sivu.html
+++ b/static/sivu.html
@@ -11,7 +11,7 @@
     <div>
       <h1>Tervetuloa</h1>
       <p>
-        Avioitumistamme juhlitaan la 9.8.2014 klo 13-18 Tammelassa nuorisoseura Ahjon talolla osoitteessa Hykkiläntie 637. Tilaisuus alkaa maljan nostamisella, minkä jälkeen on luvassa juhla-ateria sekä vieraiden pitämiä puheita ja muuta ohjelmaa.
+        Avioitumistamme juhlitaan la 9.8.2014 klo 13-18. Tilaisuus alkaa maljan nostamisella, minkä jälkeen on luvassa juhla-ateria sekä vieraiden pitämiä puheita ja muuta ohjelmaa.
       </p>
 
       <p>
@@ -19,13 +19,12 @@
       </p>
 
       <p>
-        Emme toivo häälahjoja, mutta mikäli haluatte muistaa meitä, voitte osallistua häämatkarahastoomme FI39 5723 3320 0749 57 (Johanna Keto).
+        Emme toivo muita häälahjoja kuin onnistuneita juhlia, mutta voitite halutessanne osallistua häämatkarahastoomme FI39&nbsp;5723&nbsp;3320&nbsp;0749&nbsp;57&nbsp;(Johanna Keto).
       </p>
 
       <h2>Paikka</h2>
       <p>
-        Häät pidetään tammelassa, forssan lähellä diipaadaapaa osoitteessa lunkaankatu 123.
-        <br>
+        Häät pidetään Tammelassa Ahjon nuorisotalolla osoitteessa Hykkiläntie 637.
 
         <div id="map"><iframe width="100%" height="100%" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Hykkil%C3%A4ntie%20637%2C%20Tammela%2C%20Finland&key=AIzaSyCR0DFJ75pKwy0XE3xhrHyowGSh4OC9XrE"></iframe> </div>
       </p>
@@ -33,7 +32,12 @@
       <h2>RSVP</h2>
       <p>
         Muistattehan ilmoittaa kutsukunnastanne myös ne, jotka eivät pääse tulemaan.
-
+      </p>
+      <p>
+        Vieraiden pitämät puheet ja esitykset ovat aina tervetulleita. Jos
+        haluatte antaa lisänne ohjelmistoon, ilmoitattehan siitä alla olevassa
+        "Muuta"-kentässä. Kenttään voi myös jättää ilmoittautumisen
+        iltajatkoille, tiedon yöpymistarpeesta tai muita viestejä.
       </p>
       <form action="form" method="post">
         <ul class="people">
@@ -47,7 +51,7 @@
             <span class="label">
               Pääsee:
             </span>              
-              <input type="radio" name="rsvp1" value="1" />Joo
+              <input type="radio" name="rsvp1" value="1" />Kyllä
               <input type="radio" name="rsvp1" value="0" checked />Ei
             </div>
             <span class="label">
@@ -65,7 +69,7 @@
             <span class="label">
               Pääsee:
             </span>              
-              <input type="radio" name="rsvp2" value="1" />Joo
+              <input type="radio" name="rsvp2" value="1" />Kyllä
               <input type="radio" name="rsvp2" value="0" checked />Ei
             </div>
             <span class="label">
@@ -84,7 +88,7 @@
             <span class="label">
               Pääsee:
             </span>              
-              <input type="radio" name="rsvp3" value="1" />Joo
+              <input type="radio" name="rsvp3" value="1" />Kyllä
               <input type="radio" name="rsvp3" value="0" checked />Ei
             </div>
             <span class="label">
@@ -103,7 +107,7 @@
             <span class="label">
               Pääsee:
             </span>              
-              <input type="radio" name="rsvp4" value="1" />Joo
+              <input type="radio" name="rsvp4" value="1" />Kyllä
               <input type="radio" name="rsvp4" value="0" checked />Ei
             </div>
             <span class="label">
@@ -122,7 +126,7 @@
             <span class="label">
               Pääsee:
             </span>              
-              <input type="radio" name="rsvp5" value="1" />Joo
+              <input type="radio" name="rsvp5" value="1" />Kyllä
               <input type="radio" name="rsvp5" value="0" checked />Ei
             </div>
             <span class="label">
@@ -141,7 +145,7 @@
             <span class="label">
               Pääsee:
             </span>              
-              <input type="radio" name="rsvp6" value="1" />Joo
+              <input type="radio" name="rsvp6" value="1" />Kyllä
               <input type="radio" name="rsvp6" value="0" checked />Ei
             </div>
             <span class="label">
